# Territory_Automation

./: .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: options.json  territories_template.xlsx
docs/: GUIDE.md
territory_automation/: __init__.py  automation.py  data_loader.py  logger_setup.py
tools/: calibration.py  coordinate_finder.py  create_template.py  test_calibration.py  test_connection.py
